# generateBrittleFractureDataset

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/generateBrittleFractureDataset/: advance.h  advanceMassive.h  damageGradient.h  extractCrack.h  grid.h  materials.h  particles.h  utils.h  weights.h
scripts/: TODO.txt
src/: advance.cpp  advanceMassive.cpp  damageGradient.cpp  extractCrack.cpp  main.cpp  particles.cpp  utils.cpp  weights.cpp
